--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "pm2": "pm2 start npm --name 'zhenxi-web' --start"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
     "ant-design-vue": "^1.7.8",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
