--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "postcss-px-to-viewport-8-plugin": "^1.1.5",
     "sass": "^1.55.0",
     "sass-loader": "^7.3.1",
-    "sass-resources-loader": "^2.2.5"
+    "sass-resources-loader": "^2.2.5",
+    "svg-sprite-loader": "^6.0.11",
+    "svgo-loader": "^3.0.1"
   }
 }
